# IPS-portal

./: .env.example  .gitignore  .pre-commit-config.yaml  DeployingOnSpin.md  Dockerfile  Dockerfile.db-backup  Dockerfile.mongodb-backup  MANIFEST.in  README.md  create_test_db.py  create_test_mongodb.py  docker-compose-complete.yml  docker-compose.yml  docker-entrypoint.sh  environment.yml  environment_dev.yml  ipsportal-secrets-example.yaml  ipsportal.yaml  mongodb-backup  nginx.conf  pyproject.toml  secret.yaml  setup.cfg  setup.py
.github/workflows/: workflows.yml
devtools/jupyterlab/: Dockerfile  docker-cmd.sh
devtools/jupyterlab/work/: .gitignore
ips_test/: run_test.sh  sim.conf
ipsportal/: __init__.py  analysis.py  api.py  data_api.py  datatables.py  db.py  ensemble.py  environment.py  jupyter.py  login.py  minio.py  resourceplot.py  run.py  schema.sql  trace.py  trace_jaeger.py  util.py
ipsportal/_jupyter/: api_v1.py  initializer.py  ips_analysis_api_v1.py  ips_api_v1.py
ipsportal/_jupyter/hub_implementations/: __init__.py  generic.py  nersc.py
ipsportal/notebooks/: monitor.ipynb
ipsportal/static/: child-runs-table.js  event-table.js  events.css  jupyter_url.js  runs-table.js  script.js  signin.css  style.css
ipsportal/templates/: 404.html  base.html  events.html  index.html  login.html  notfound.html
ipsportal/utils/: file_locker.py
scripts/: create_test_mongodb.py  event_test.sh
tests/: conftest.py  run_ips_test.sh  test_api.py  test_page_render.py  test_post_event.py
tests/ips_test/: component.py  platform.conf  sim.conf
