[metadata]
name = ipsportal
description = IPS Portal for IPS Framework

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    flask==2.2.2
    pymongo==4.3.3
    gunicorn==20.1
    plotly==5.11
    requests==2.28.1

[options.extras_require]
dev = pytest; coverage; flake8==4.0.1; mypy; types-requests; types-Werkzeug; mongo-types

[flake8]
max-line-length = 120

[coverage:report]
include = ipsportal/*.py

[mypy]
ignore_missing_imports = True
strict = True
