[metadata]
name = ipsportal
description = IPS Portal for IPS Framework

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    flask==2.3.3
    pymongo==4.6.3
    gunicorn==20.1
    plotly==5.11
    requests==2.31.0
    minio==7.2.7

[options.extras_require]
# mongo-types no longer seems necessary and has some annoying bugs, i.e. https://github.com/sbdchd/mongo-types/issues/68
dev = pytest; coverage; flake8; mypy; types-requests

[flake8]
max-line-length = 120
extend-exclude = .venv

[coverage:report]
include = ipsportal/*.py

[mypy]
ignore_missing_imports = True
strict = True
